Fix more UI issues

--- a/course/templates/course/_siblings.html
+++ b/course/templates/course/_siblings.html
@@ -11,11 +11,11 @@
 		{% endif %}
 		{% if accessible and previous.is_revealed or accessible and previous.type == "module" %}
 		<a href="{{ previous.link }}" class="nav-flex-left">
-			<span aria-hidden="true">&laquo;</span> {{ previous.name|parse_localization }}
+			<i class="bi bi-chevron-double-left" aria-hidden="true"></i> {{ previous.name|parse_localization }}
 		</a>
 		{% else %}
 		<span class="text-muted disabled">
-			<span aria-hidden="true">&laquo;</span> {{ previous.name|parse_localization }}
+			<i class="bi bi-chevron-double-left" aria-hidden="true"></i> {{ previous.name|parse_localization }}
 			{% if is_course_staff %}
 			<a href="{{ previous.link }}">
 				<i class="bi-lock" aria-hidden="true"></i>
@@ -42,11 +42,11 @@
 		{% endif %}
 		{% if accessible and next.is_revealed or accessible and next.type == "module" %}
 		<a href="{{ next.link }}" class="nav-flex-right">
-			{{ next.name|parse_localization }} <span aria-hidden="true">&raquo;</span>
+			{{ next.name|parse_localization }} <i class="bi bi-chevron-double-right" aria-hidden="true"></i>
 		</a>
 		{% else %}
 		<span class="text-muted disabled">
-			{{ next.name|parse_localization }} <span aria-hidden="true">&raquo;</span>
+			{{ next.name|parse_localization }} <i class="bi bi-chevron-double-right" aria-hidden="true"></i>
 			{% if is_course_staff %}
 			<a href="{{ next.link }}">
 				<i class="bi-lock" aria-hidden="true"></i>
