--- a/edit_course/templates/edit_course/clone_instance.html
+++ b/edit_course/templates/edit_course/clone_instance.html
@@ -16,7 +16,7 @@
   <div class="card-header bg-primary">
     <h5 class="card-title text-white">{% translate "COURSE_INSTANCES" %}</h5>
   </div>
-  <table class="table table-striped table-bordered table-sm mb-0">
+  <table class="table table-striped aplus-table-bordered table-sm mb-0">
     <tbody>
       {% for ci in course.instances.all %}
       <tr>
