--- a/exercise/templates/exercise/staff/_submitters_table.html
+++ b/exercise/templates/exercise/staff/_submitters_table.html
@@ -121,7 +121,7 @@
 		</tr>
 		{% empty %}
 		<tr>
-			<td class="5">{% translate "NO_SUBMITTERS" %}</td>
+			<td colspan="6">{% translate "NO_SUBMITTERS" %}</td>
 		</tr>
 		{% endfor %}
 	</tbody>
