--- a/course/templates/course/staff/groups.html
+++ b/course/templates/course/staff/groups.html
@@ -16,7 +16,7 @@
   <p>
     {% translate "NUMBER_OF_GROUPS" %} <strong>{{ groups|length }}</strong>
     <a class="aplus-button--default aplus-button--xs" role="button" href="{{ instance|url:'groups-add' }}">
-      <i class="far fa-plus-sign" aria-hidden="true"></i>
+      <i class="bi bi-plus-lg" aria-hidden="true"></i>
       {% translate "ADD_NEW" %}
     </a>
   </p>
@@ -38,11 +38,11 @@
         <td>{{ group.timestamp }}</td>
         <td>
           <a class="aplus-button--secondary aplus-button--xs" role="button" href="{% url 'groups-edit' course_slug=course.url instance_slug=instance.url group_id=group.id %}">
-            <i class="bi-pencil-square" aria-hidden="true"></i>
+            <i class="bi bi-pencil-square" aria-hidden="true"></i>
             {% translate "EDIT" %}
           </a>
           <a class="aplus-button--danger aplus-button--xs" role="button" href="{% url 'groups-delete' course_slug=course.url instance_slug=instance.url group_id=group.id %}">
-            <i class="bi-x-lg" aria-hidden="true"></i>
+            <i class="bi bi-x-lg" aria-hidden="true"></i>
             {% translate "REMOVE" %}
           </a>
         </td>
