--- a/deviations/templates/deviations/list_submissions.html
+++ b/deviations/templates/deviations/list_submissions.html
@@ -15,15 +15,15 @@
 <div class="col-md-12">
 	<p>
 		<a class="aplus-button--default aplus-button--xs" href="{{ instance|url:'deviations-add-submissions' }}">
-			<i class="bi-plus-lg" aria-hidden="true"></i>
+			<i class="bi bi-plus-lg" aria-hidden="true"></i>
 			{% translate "ADD_NEW_SUBMISSION_DEVIATIONS" %}
 		</a>
 		<a class="aplus-button--default aplus-button--xs" href="{{ instance|url:'deviations-remove-submissions' }}">
-			<i class="bi-dash-circle-fill" aria-hidden="true"></i>
+			<i class="bi bi-dash-lg" aria-hidden="true"></i>
 			{% translate "REMOVE_SUBMISSION_DEVIATIONS" %}
 		</a>
 		<a class="aplus-button--danger aplus-button--xs float-end" id="remove-selected-button" data-bs-toggle="modal" data-bs-target="#remove-selected-modal" role="button">
-			<i class="bi-dash-circle-fill" aria-hidden="true"></i>
+			<i class="bi bi-dash-lg" aria-hidden="true"></i>
 			{% translate "REMOVE_SELECTED_DEVIATIONS" %}
 		</a>
 	</p>
@@ -33,7 +33,7 @@
 			<div class="card-header bg-primary">
 				<h5 class="card-title text-white">{% translate "SUBMISSION_DEVIATIONS" %}</h5>
 			</div>
-			<table class="table table-striped table-bordered table-sm filtered-table ordered-table grouped-table mb-0" data-default-sort-column="4" data-default-sort-order="desc">
+			<table class="table table-striped aplus-table-bordered table-sm filtered-table ordered-table grouped-table mb-0" data-default-sort-column="4" data-default-sort-order="desc">
 				<thead>
 					<tr>
 						<th>{% translate "SUBMITTER" %}</th>
@@ -82,7 +82,7 @@
 							{% endif %}
 						</td>
 						<td>
-							<input type="checkbox">
+							<input class="form-check-input" type="checkbox">
 						</td>
 					</tr>
 					{% endif %}
@@ -110,7 +110,7 @@
 							{% endif %}
 						</td>
 						<td>
-							<input type="checkbox" name="id" value="{{ deviation.id }}">
+							<input class="form-check-input" type="checkbox" name="id" value="{{ deviation.id }}">
 						</td>
 					</tr>
 					{% endfor %}
