--- a/deviations/templates/deviations/override_dl.html
+++ b/deviations/templates/deviations/override_dl.html
@@ -90,7 +90,7 @@
 						{% endif %}
 					</td>
 					<td>
-						<input type="checkbox" checked>
+						<input class="form-check-input" type="checkbox" checked>
 					</td>
 				</tr>
 				{% endif %}
@@ -129,7 +129,7 @@
 						{% endif %}
 					</td>
 					<td>
-						<input type="checkbox" name="override" value="{{ deviation.submitter.id }}.{{ deviation.exercise.id }}" checked>
+						<input class="form-check-input" type="checkbox" name="override" value="{{ deviation.submitter.id }}.{{ deviation.exercise.id }}" checked>
 					</td>
 				</tr>
 				{% endfor %}
