--- a/exercise/templates/exercise/staff/edit_submitters.html
+++ b/exercise/templates/exercise/staff/edit_submitters.html
@@ -18,14 +18,16 @@
 <div class="col-md-12">
       <form method="post" class="card form">
           {% csrf_token %}
-          {% bootstrap_form form %}
-          <div class="form-group">
-              <button type="submit" class="aplus-button--default aplus-button--md">{% translate "SAVE" %}</button>
-              <a href="{{ submission|url:'submission-inspect' }}" class="aplus-button--secondary aplus-button--md" role="button">{% translate "CANCEL" %}</a>
+          <div class="card-body">
+            {% bootstrap_form form %}
+            <div class="form-group">
+                <button type="submit" class="aplus-button--default aplus-button--md">{% translate "SAVE" %}</button>
+                <a href="{{ submission|url:'submission-inspect' }}" class="aplus-button--secondary aplus-button--md" role="button">{% translate "CANCEL" %}</a>
+            </div>
           </div>
       </form>
       {% if groups %}
-      <h4>{% translate "QUICK_SELECT_GROUP" %}</h4>
+      <h4 class="mt-2">{% translate "QUICK_SELECT_GROUP" %}</h4>
       <table class="table table-sm" id="group-select">
         <tbody>
           {% for group in groups %}
