--- a/news/templates/news/list.html
+++ b/news/templates/news/list.html
@@ -27,7 +27,7 @@
 	{% for item in news %}
 	<tr>
 		<td id={{item.id}}>
-			<input type="checkbox" name="selection" value="{{item.id}}">
+			<input class="form-check-input" type="checkbox" name="selection" value="{{item.id}}">
 		</td>
 
 		<td>
