--- a/userprofile/templates/userprofile/teachers.html
+++ b/userprofile/templates/userprofile/teachers.html
@@ -35,7 +35,7 @@
 		<div class="form-group row">
 				<label for="with-assistants" class="col-md-4 col-sm-4 col-form-label">{% translate "INCLUDE_ASSISTANTS" %}</label>
 				<div class="col-md-8 col-sm-8">
-					<input id="with-assistants" name="with_assistants" type="checkbox" value="true" {% if request.GET.with_assistants == "true" %}checked{%endif%}/>
+					<input class="form-check-input" id="with-assistants" name="with_assistants" type="checkbox" value="true" {% if request.GET.with_assistants == "true" %}checked{%endif%}/>
 				</div>
 		</div>
 		<div class="form-group row">
