Fix issue with left-off reminders
BS5 upgrade caused left-off reminders to be shown on unrelated
courses due to changed HTML

--- a/course/templates/course/course.html
+++ b/course/templates/course/course.html
@@ -22,7 +22,7 @@
 	$(function () {
 		const lastVisitedObject = JSON.parse(localStorage.getItem("lastVisitedReminder"));
 		if (lastVisitedObject) {
-			const lastVisited = lastVisitedObject[$("li.menu-home > a").attr("href")];
+			const lastVisited = lastVisitedObject[$("a.menu-home").attr("href")];
 			if (lastVisited) {
 				const alert = $('#left-off-reminder');
 				alert.removeClass("d-none");
