--- a/edit_course/templates/edit_course/usertag_delete.html
+++ b/edit_course/templates/edit_course/usertag_delete.html
@@ -23,7 +23,7 @@
 
 		<div class="alert alert-danger">
 			{% translate "REMOVE_USER_TAG_CONFIRMATION_ALERT" %}
-			{{ object|colortag }}
+			{{ object|colortag:"size=sm" }}
 		</div>
 
 		<div class="form-group">
