--- a/course/templates/course/staff/all_submissions_table.html
+++ b/course/templates/course/staff/all_submissions_table.html
@@ -36,7 +36,7 @@
 	<p class="filter-submissions">
 		<small class="text-body-secondary">{% trans "FILTER_SUBMISSIONS_BY_TAG" %}:</small>
 		{% for tag in tags %}
-		<button class="btn btn-sm filter-tag" style="background-color:{{ tag.color }};color:{{ tag.font_color }};" data-tagslug="{{ tag.slug }};" data-status="{{ tag.status }}" >
+		<button class="btn aplus-button--xs filter-tag" style="background-color:{{ tag.color }};color:{{ tag.font_color }};" data-tagslug="{{ tag.slug }};" data-status="{{ tag.status }}" >
 			<i class="bi-square" aria-hidden="true"></i>
 			{{ tag.name }}
 		</button>
@@ -87,7 +87,7 @@
 				</td>
 				<td id="submission_tags">
 				{% for tagging in summary.submission.submission_taggings.all %}
-					{{ tagging.tag|colortag }}
+					{{ tagging.tag|colortag:"size=sm" }}
 				{% endfor %}
 				</td>
 				<td>
