--- a/edit_course/templates/edit_course/submissiontag_list.html
+++ b/edit_course/templates/edit_course/submissiontag_list.html
@@ -33,7 +33,7 @@
 		{% with hide_tooltip=True %}
 		{% for tag in object_list %}
 		<tr>
-			<td>{{ tag|colortag }}</td>
+			<td>{{ tag|colortag:"size=sm" }}</td>
 			<td>{{ tag.slug }}</td>
 			<td>{{ tag.description }}</td>
 			<td>
