Update staff all results page datatables plugin

--- a/exercise/templates/exercise/staff/results.html
+++ b/exercise/templates/exercise/staff/results.html
@@ -18,12 +18,11 @@
 <script src="{% static 'exercise/bootstrap-multiselect.js' %}"></script>
 
 <!-- DataTables plugin with Bootstrap 5 styling and Buttons/export support -->
-<link href="https://cdn.datatables.net/v/bs5/dt-2.2.1/b-3.2.1/b-html5-3.2.1/datatables.min.css" rel="stylesheet">
-
-<script src="https://cdn.datatables.net/v/bs5/dt-2.2.1/b-3.2.1/b-html5-3.2.1/datatables.min.js"></script>
+<link href="https://cdn.datatables.net/v/bs5/dt-2.3.5/b-3.2.5/b-html5-3.2.5/datatables.min.css" rel="stylesheet" integrity="sha384-nskYRpyVx+I3rX2V8Ny2vZQWsxVYpxue5mMnRDFgJQfm2omMVdkogzt2v5YrGznk" crossorigin="anonymous">
+<script src="https://cdn.datatables.net/v/bs5/dt-2.3.5/b-3.2.5/b-html5-3.2.5/datatables.min.js" integrity="sha384-Z/cS3o6dUVPL59gCOrSJDwaZ8evE+jG9wJmIbSd6XKMcn2Cdw77vJDAxVvqUFBxU" crossorigin="anonymous"></script>
 
 <!-- DataTables plugin for calculating a sum during data filtering -->
-<script src="https://cdn.datatables.net/plug-ins/2.2.1/api/sum().js"></script>
+<script src="https://cdn.datatables.net/plug-ins/2.3.5/api/sum().js"></script>
 
 <!--Custom for loading animation (loading_animation.css) and other extra customizations (results_staff.css)
     results_staff.js is the main script for this page. -->
